# magisterka-rtos

./: .gitignore  build_apps.sh  commands.rd
board_config/include/: board_config.h  hal_it.h  mqtt_portable.h  nanoprintf.h  rtos_portable.h
board_config/src/: board_config.c  hal_it.c  hal_msp.c
freertos/: CMakeLists.txt  cross.cmake  linker.ld
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/Application-Protocols/coreMQTT-Agent/source/dependency/coreMQTT/source/: core_mqtt.c
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/Application-Protocols/network_transport/sockets_wrapper/freertos_plus_tcp/: sockets_wrapper.c
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/Application-Protocols/network_transport/using_mbedtls/: using_mbedtls.c  using_mbedtls.h
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/Application-Protocols/network_transport/using_plaintext/: using_plaintext.c
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/: FreeRTOS_ARP.c  FreeRTOS_DHCP.c  FreeRTOS_IP.c  FreeRTOS_Sockets.c
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/include/: NetworkInterface.h
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/FreeRTOS-Plus-TCP/portable/NetworkInterface/STM32Fxx/: NetworkInterface.c
freertos/components/FreeRTOS/FreeRTOS-Plus/Source/Utilities/mbedtls_freertos/: mbedtls_freertos_port.c
freertos/include/: FreeRTOSConfig.h  FreeRTOSHandlers.h  FreeRTOSIPConfig.h  TCPEchoServer.h  TCPExample.h  ip_stack.h  logging_levels.h  mqtt_config.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h  subscription_manager.h
freertos/src/: TCPEchoServer.c  TCPExample.c  freertos_msp.c  ip_stack.c  libc_hooks.c  main.c  mqtt_portable.c  rtos_portable.c  stm32f2xx_it.c
interface/include/: benchmark_interface.h  jitter_interface.h
jitter/include/: jitter_test.h  scenario.h  scenario_1.h  scenario_2.h  scenario_3.h  scenario_4.h
jitter/src/: scenario.c
mbed-os-app/: .mbed  board_config  jitter  main.cpp  mqtt  mqtt_portable_cpp.cpp  rhealstone  rtos_portable_cpp.cpp
mbed-os-app/include/: mqtt_portable_cpp.h  rtos_portable_cpp.h  test_selection.h
mbed-os-app/mbed-mqtt/paho_mqtt_embedded_c/MQTTClient/src/: MQTTClient.h
mbed-os-app/mbed-os/: mbed.h
mbed-os-app/mbed-os/hal/: mbed_ticker_api.c
mbed-os-app/mbed-os/platform/: mbed_retarget.cpp
mbed-os-app/mqtt_portable/src/: mqtt_portable.c
mbed-os-app/rtos_portable/src/: rtos_portable.c
mqtt/include/: connection_time.h
mqtt/src/: connection_time.c
rhealstone/include/: deadlock_breaking_time.h  interrupt_latency.h  intertask_msg_latency.h  semaphore_shuffle.h  task_preemption.h  task_switch.h  test_benchmark.h
rhealstone/src/: deadlock_breaking_time.c  interrupt_latency.c  intertask_msg_latency.c  semaphore_shuffle.c  task_preemption.c  task_switch.c
scripts/: jitter_script.py  mqtt_connection_script.py  mqtt_qos_script.py  rhealstone_script.py
scripts/rtos_files/jitter/: prj.conf
scripts/rtos_files/rhealstone/: FreeRTOSConfig.h  prj.conf
zephyrproject/modules/hal/stm32/stm32cube/stm32f2xx/drivers/include/: stm32f2xx_hal_conf.h
zephyrproject/zephyr/app/: CMakeLists.txt
zephyrproject/zephyr/app/include/: mqtt_config.h
zephyrproject/zephyr/app/src/: main.c  mqtt_portable.c  rtos_portable.c
zephyrproject/zephyr/drivers/interrupt_controller/: intc_exti_stm32.c
zephyrproject/zephyr/kernel/: banner.c
zephyrproject/zephyr/samples/net/mqtt_publisher/: prj.conf
zephyrproject/zephyr/samples/net/sockets/echo_client/: prj.conf
zephyrproject/zephyr/scripts/west_commands/runners/: openocd.py
zephyrproject/zephyr/soc/arm/st_stm32/stm32f2/: Kconfig.series
